<resources>
    <string name="app_name">Dzn-Dzn</string>
    <string name="facebook_app_id">651800944972928</string>
    <integer name="com_vk_sdk_AppId">5474561</integer>

    <string name="twitter_key">xgKQiEvIz7szWvTT1TujRLi1C</string>
    <string name="twitter_secret">4hTtxVjDLIc6C2l5iZbexaFJ6BIl7j1qnpg6gQ0fhU6HYU3qys</string>
    <!-- Common strings -->
    <string name="ready">READY</string>
    <string name="edit">CHANGE</string>
    <string name="error">Error</string>
    <string name="error_photo_message">An error occurred while photographing</string>

    <!-- Main activity -->
    <string name="app_colon">:</string>
    <string name="main_activity_text">You have installed alarms on selfie:</string>
    <string name="main_activity_button_new">NEW</string>

    <!-- New_Edit activity -->
    <string name="new_edit_activity_tune">Tune</string>
    <string name="new_edit_activity_back">CANCEL</string>
    <string name="new_edit_activity_setting">Setting alarm</string>
    <string name="new_edit_activity_repeat">Repeat</string>
    <string name="new_edit_activity_music">Music:</string>
    <string name="new_edit_activity_interval">Intervals:</string>
    <string name="new_edit_activity_social_network">Social network:</string>
    <string name="new_edit_activity_vibro">vibro</string>

    <!-- Short Days of week -->
    <string name="short_sunday">Su</string>
    <string name="short_monday">Mo</string>
    <string name="short_tuesday">Tu</string>
    <string name="short_wednesday">We</string>
    <string name="short_thursday">Th</string>
    <string name="short_friday">Fr</string>
    <string name="short_saturday">Sa</string>

    <string name="short_facebook">FB</string>
    <string name="short_vkontakte">VK</string>
    <string name="short_twitter">TW</string>
    <string name="short_instagram">IS</string>

    <string name="name_facebook">Facebook</string>
    <string name="name_vkontakte">Vkontakte</string>
    <string name="name_twitter">Twitter</string>
    <string name="name_instagram">Instagram</string>

    <string-array name="new_edit_activity_spinner_repeat">
        <item>Onсу</item>
        <item>Everyday</item>
        <item>Working days</item>
        <item>Weekend</item>
        <item>Other...</item>
    </string-array>

    <string-array name="new_edit_activity_spinner_settings">
        <item>general settings</item>
    </string-array>

    <string-array name="new_edit_activity_spinner_music">
        <item>general settings</item>
        <item>other...</item>
    </string-array>

    <string-array name="new_edit_activity_spinner_social_network">
        <item>general settings</item>
        <item>other...</item>
    </string-array>

    <!-- Settings activity -->
    <string name="settings_activity_settings">Settings</string>
    <string name="settings_activity_language_ru">Russian</string>
    <string name="settings_activity_language_en">English</string>
    <string name="settings_activity_sound_of_alarms">Sound alarm</string>
    <string name="settings_activity_sound">Sound</string>
    <string name="settings_activity_wake_up">Wake Up</string>
    <string name="settings_activity_section_alarm">Setting alarm</string>
    <string name="settings_activity_interval_wake_up">Interval awakening</string>
    <string name="settings_activity_interval_repeat">Retry interval</string>
    <string name="settings_activity_vibro">Vibration</string>
    <string name="settings_activity_section_social_network">Settings social networks</string>
    <string name="settings_activity_upload_photo">Turn on photos pf the publication</string>
    <string name="settings_activity_minutes">min</string>
    <string name="settings_activity_select_melody">Select melody</string>
    <string name="settings_activity_location">Location on selfie</string>

    <!-- Alarms activity -->
    <string name="alarms_activity_name">Alarms</string>
    <string name="alarms_activity_add">add</string>

    <!-- Start activity -->
    <string name="start_activity_set">Set your first selfie alarm</string>
    <string name="start_activity">start</string>

    <!-- Create Selfie activity -->
    <string name="create_selfie_activity_create">Take a selfie to turn off the alarm clock!</string>
    <string name="good_morning">GOOD MORNING!</string>
    <string name="create_selfie_activity_spread">publish selfie...</string>
    <string name="network_error">Network is not available. Check connection.</string>

    <string name="morning">My morning</string>
<!--    <string name="publish_message">Good morning! #DZNDZN</string> -->
    <string name="publish_message">Good morning World! Selfies alarm clock #dzndzn woke me #dzndzn</string>

    <!-- Dialog of delete alarm -->
    <string name="dialog_delete_alarm">Are you sure to delete the alarm?</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
