<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNewEditBackground"
    android:orientation="vertical"
    tools:context="com.dzn.dzn.application.Activities.AlarmsActivity">

    <!-- Section Menu -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:background="@mipmap/ic_cl_yellow"
            android:onClick="onClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAlarmsName"
            style="@style/ActivityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/alarms_activity_name" />

        <TextView
            android:id="@+id/tvAlarmsReady"
            style="@style/NewEditActivityTextBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="editAlarm"
            android:padding="@dimen/app_padding_8dp"
            android:text="@string/edit" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_divider_line"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <LinearLayout
            android:id="@+id/liner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/app_padding_32dp"
            android:paddingTop="@dimen/app_padding_32dp">

            <Button
                android:id="@+id/btnAdd"
                style="@style/AlarmsActivityAdd"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_new"
                android:onClick="onAlarmAdd"
                android:text="@string/alarms_activity_add" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
