<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    android:orientation="vertical"
    tools:context="com.dzn.dzn.application.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="26dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/menu" />

        <ImageButton
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true"
            android:background="@mipmap/settings" />

    </RelativeLayout>

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="32dp"
        android:background="@mipmap/dzn_dzn" />

    <TextView
        android:id="@+id/tvMainPrompt"
        style="@style/MainActivityTextPrompt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/main_activity_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_divider_line"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvHourOne"
            style="@style/MainActivityTextClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />

        <TextView
            android:id="@+id/tvColonOne"
            style="@style/MainActivityTextClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_colon" />

        <TextView
            android:id="@+id/tvMinuteOne"
            style="@style/MainActivityTextClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_divider_line"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvHourTwo"
            style="@style/MainActivityTextClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />

        <TextView
            android:id="@+id/tvColonTwo"
            style="@style/MainActivityTextClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_colon" />

        <TextView
            android:id="@+id/tvMinuteTwo"
            style="@style/MainActivityTextClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_divider_line"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_new"
            style="@style/MainActivityButtonNew"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_button_new"
            android:background="@drawable/button_new"
            android:onClick="onNewEditAlarm"/>

    </LinearLayout>

</LinearLayout>
